@@ -26,7 +26,7 @@ reload the project.
  OmegaT 2.3.0
  ----------------------------------------------------------------------
    7 Enhancements
-   3 Bug fixes
+   4 Bug fixes
    2 Localisation updates
 ----------------------------------------------------------------------
 2.3.0 vs. 2.2.3 update 4
@@ -68,6 +68,9 @@ with Windows 64-bit
 
   - LaTeX filter: comments are removed from target documents
   http://sourceforge.net/support/tracker.php?aid=3297471
+
+  - PO filter: when a segment had trailing spaces, it was not visible for 
+translation in OmegaT
 
   Localisation updates:
 
